[package]
name = "kerberust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
rayon = "1.10.0"

[dependencies.krb5rs]
path = "../krb5rs"

[dependencies.krb5asn1]
path = "../krb5asn1"
