[package]
name = "kerberust"
version = "0.0.2"
edition = "2021"
description = "A commandline kerberos protocol attacker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
rayon = "1.10.0"

[dependencies.krb5rs]
git = "https://github.com/drdragon79/krb5rs"
# path = "../krb5rs"
